--- a/resources/scss/mosaic.authoring.resizing.scss
+++ b/resources/scss/mosaic.authoring.resizing.scss
@@ -13,7 +13,7 @@
     opacity: 0.5 !important;
 }
 
-.mosaic-grid-row {
+.mosaic-grid-row:not(.mosaic-empty-row) {
     .mosaic-resize-handle {
         position: absolute;
         height: auto;
@@ -26,18 +26,21 @@
         left: -10px;
         z-index: 500;
         cursor: ew-resize;
-        display: none;
-        border-width: 3px;
-        border-color: var(--bs-primary);
+        border-right: 3px solid $gray-300;
 
         &:hover {
-            border-right-style: dashed;
+            border-right-color: $primary;
         }
+
         &.mosaic-resize-handle-helper {
             border-right-style: solid;
-            display:block;
+            display: block;
         }
     }
+}
+
+.mosaic-empty-row .mosaic-resize-handler {
+    display: none;
 }
 
 .mosaic-resize-placeholder {
@@ -56,6 +59,7 @@
     left: 0px;
     top: 0px;
     bottom: 0px;
+
     .info {
         position: absolute;
         right: 0px;
@@ -93,12 +97,7 @@ $resize-handle-perc: (
         .mosaic-grid-row-fluid-background {
             @each $pos, $perc in $resize-handle-perc {
                 .mosaic-resize-#{$pos} {
-                    margin-left: calc(
-                        (100% - $container-max-width) *
-                            0.5 +
-                            $container-max-width *
-                            #{$perc}
-                    );
+                    margin-left: calc((100% - $container-max-width) * 0.5 + $container-max-width * #{$perc});
                 }
             }
         }
